--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,13 +15,16 @@ dev = [
 # All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
 #   and android_shared_stdcxx/android-game-activity, since those are covered in `mobile`
 [dependencies]
-bevy = { version = "0.15"}
+bevy = { version = "0.15" }
 avian2d = "0.2.1"
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.30", default-features = false }
 image = { version = "0.25", default-features = false }
 ## This greatly improves WGPU's performance due to its heavy use of trace! calls
+log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_warn"] }
+wasm-bindgen = "0.2.100"
+web-sys = "0.3.77"
 
 [build-dependencies]
 embed-resource = "1"
@@ -30,8 +33,10 @@ embed-resource = "1"
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 getrandom = { version = "0.3.3", features = ["wasm_js"] }
 uuid = { version = "1.13.1", default-features = false, features = ["js"] }
-log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
 wasm-bindgen = "0.2.100"
+web-sys = { version = "0.3.77", features = [
+    "Window", "Document", "HtmlCanvasElement", "Event", "EventTarget"
+] }
 
 
 [profile.dev.package."*"]
