minor optimizations for code clarity and position gathering

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,8 +15,8 @@ dev = [
 # All of Bevy's default features exept for the audio related ones (bevy_audio, vorbis), since they clash with bevy_kira_audio
 #   and android_shared_stdcxx/android-game-activity, since those are covered in `mobile`
 [dependencies]
-bevy = { version = "0.15" }
-avian2d = "0.2.1"
+bevy = { version = "0.16.0" }
+avian2d = "0.3.0"
 
 # keep the following in sync with Bevy's dependencies
 winit = { version = "0.30", default-features = false }
@@ -25,6 +25,7 @@ image = { version = "0.25", default-features = false }
 log = { version = "0.4.27", features = ["max_level_debug", "release_max_level_warn"] }
 wasm-bindgen = "0.2.100"
 web-sys = "0.3.77"
+anyhow = "1.0.98"
 
 [build-dependencies]
 embed-resource = "1"
